optimize workflow and structure